Este código busca uma lista de Pokémon da API.

--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -28,9 +28,6 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <li class="pokemon">
-                
-            <li>
               <!-- Pokemons Here -->
         </ol>
 
@@ -39,6 +36,7 @@
 
 
     <!-- Javascript -->
+    <script src="./js/poke_api.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
