pokedex finalizada, aguardando proximas alterações

--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -31,11 +31,17 @@
               <!-- Pokemons Here -->
         </ol>
 
+        <div class="pagination">
+        <button id="loadMoreButton" type="button">
+           Carregar Mais ...
+        </button>
+        </div>
     </section>
 
 
 
     <!-- Javascript -->
+    <script src="./js/pokemon_model.js"></script>
     <script src="./js/poke_api.js"></script>
     <script src="./js/main.js"></script>
 </body>
