--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -25,7 +25,13 @@
 
 <body>
     <section class="content">
-        <h1>Pokedex</h1>
+        <div class="logo">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/269px-International_Pok%C3%A9mon_logo.svg.png"
+              height="100%"
+              alt="logo"
+            />
+          </div>
 
         <ol id="pokemonList" class="pokemons">
               <!-- Pokemons Here -->
